--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ lto = true
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
 wasm-bindgen = "0.2.81"
+wasm-bindgen-test = "0.3.31"
+futures = "0.3.21"
+js-sys = "0.3.58"
+wasm-bindgen-futures = "0.4.31"
 anyhow = "1.0.58"
 nalgebra-glm = "0.17.0"
 
@@ -38,7 +42,10 @@ features = [
     "HtmlCanvasElement",
     "Performance",
     "WebGl2RenderingContext",
+    "WebGlBuffer",
+    "WebGlProgram",
     "WebGlShader",
+    "WebGlVertexArrayObject",
     "Window",
     ]
 
@@ -51,7 +58,3 @@ console_error_panic_hook = "0.1.7"
 
 # These crates are used for running unit tests.
 [dev-dependencies]
-wasm-bindgen-test = "0.3.31"
-futures = "0.3.21"
-js-sys = "0.3.58"
-wasm-bindgen-futures = "0.4.31"
