--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ features = [
     "Document",
     "Element",
     "HtmlCanvasElement",
+    "KeyboardEvent",
     "Performance",
     "WebGl2RenderingContext",
     "WebGlBuffer",
