Tuxture (in progress)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,12 +41,14 @@ features = [
     "Document",
     "Element",
     "HtmlCanvasElement",
+    "HtmlImageElement",
     "KeyboardEvent",
     "Performance",
     "WebGl2RenderingContext",
     "WebGlBuffer",
     "WebGlProgram",
     "WebGlShader",
+    "WebGlTexture",
     "WebGlUniformLocation",
     "WebGlVertexArrayObject",
     "Window",
