--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ wasm-bindgen-futures = "0.4.31"
 anyhow = "1.0.58"
 nalgebra-glm = "0.17.0"
 nalgebra = "0.31.1"
+async-trait = "0.1.57"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
@@ -41,12 +42,14 @@ features = [
     "Document",
     "Element",
     "HtmlCanvasElement",
+    "HtmlImageElement",
     "KeyboardEvent",
     "Performance",
     "WebGl2RenderingContext",
     "WebGlBuffer",
     "WebGlProgram",
     "WebGlShader",
+    "WebGlTexture",
     "WebGlUniformLocation",
     "WebGlVertexArrayObject",
     "Window",
