--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ async-trait = "0.1.57"
 [dependencies.web-sys]
 version = "0.3.58"
 features = [
+    "CanvasRenderingContext2d",
     "console",
     "Document",
     "Element",
