--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ anyhow = "1.0.58"
 nalgebra-glm = "0.17.0"
 nalgebra = "0.31.1"
 async-trait = "0.1.57"
+serde = { version = "1.0.147", features = ["derive"] }
+serde-wasm-bindgen = "0.4.5"
+url = "2.3.1"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
@@ -46,6 +49,7 @@ features = [
     "HtmlImageElement",
     "KeyboardEvent",
     "Performance",
+    "Response",
     "WebGl2RenderingContext",
     "WebGlBuffer",
     "WebGlFramebuffer",
