--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ features = [
     "Performance",
     "Response",
     "WebGl2RenderingContext",
+    "WebGlActiveInfo",
     "WebGlBuffer",
     "WebGlFramebuffer",
     "WebGlProgram",
