--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ async-trait = "0.1.57"
 serde = { version = "1.0.147", features = ["derive"] }
 serde-wasm-bindgen = "0.4.5"
 url = "2.3.1"
+num-traits = "0.2.15"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
