--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "rimraf dist pkg && webpack",
-    "start": "rimraf dist pkg && webpack serve --open",
+    "start": "rimraf dist pkg && webpack serve",
     "test": "cargo test && wasm-pack test --headless"
   },
   "devDependencies": {
